--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ fastlane/test_output
 
 iOSInjectionProject/
 Networking.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/UserInterfaceState.xcuserstate
+Networking.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/UserInterfaceState.xcuserstate
